examples/fail/division_by_zero.uplp
category = "error"

[metadata]
error = "Evaluation.division_by_zero"
---
let zero = 0 in 1 / zero